# blockdiff

./: .gitignore  README.md  blockdiff_mcp.py  diff.js  dst1.txt  file-a.md  file-b.md  file.txt  file1.txt  file2.txt  file_a.txt  file_b.txt  pyproject.toml  src1.txt  test-a.md  test-b.md  test_a.txt  test_b.txt  test_c.txt  test_e.txt  test_empty.txt  test_g.txt  test_src.txt
blockdiff/: __init__.py  cacycle.py  cli.py  heckel.py  match.py  mcp_server.py  output.py  parse.py
blockdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_classify.py  test_diagnostic_markers.py  test_diagnostic_raw_engine.py  test_imports.py  test_move_e2e.py  test_nightmare_e2e.py  test_sentinel.py  test_spec.py
