[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blockdiff"
version = "0.1.0"
description = "A git diff wrapper that detects cross-file moved lines"
readme = "README.md"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "unidiff",
    "redlines",
    "rich",
    "typing_extensions"
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]",
    "typing_extensions"
]

[project.scripts]
blockdiff = "blockdiff.cli:main"
blockdiff-mcp = "blockdiff.mcp_server:run"
