[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blockdiff"
version = "0.1.0"
description = "A tool that detects cross-file moved blocks using git for file tracking and a block-move diff engine for content"
readme = "README.md"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich"
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]"
]

[project.scripts]
blockdiff = "blockdiff.cli:main"
blockdiff-mcp = "blockdiff.mcp_server:run"
